<resources>
    <string name="app_name">EzMind</string>
    <string name="new_map">New map</string>
    <string name="root_node">Root node</string>
    <string name="text_size">Text size</string>
    <string name="fill_color">Fill color</string>
    <string name="text_color">Text color</string>
    <string name="outline_color">Outline color</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="line_color">Line color</string>
    <string name="line_effect">Line effect</string>
    <string name="delete_root_message">Root node can not be deleted.</string>
    <string name="edit_text">Edit text</string>
    <string name="map_name">Map name</string>
    <string name="cancel">Cancel</string>
    <string name="empty">Empty folder</string>
    <string name="save">Save</string>
    <string name="save_and_exit">Save and exit</string>
    <string name="save_as">Save as</string>
    <string name="search">Search</string>
    <string name="preferences">Preferences</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="refresh">Refresh</string>
    <string name="arrow">Arrow</string>
    <string name="multiple_select_messages">Select multiple nodes</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>

    <string name="rename_map">Rename</string>
    <string name="copy_map">Copy</string>
    <string name="delete_map">Delete</string>

    <string name="outline_width">Outline width</string>
    <string name="text_effect">Text effect</string>
    <string name="text_alignment">Alignment</string>

    <string name="curve">Curve</string>

    <string name="line_width">Line width</string>

    <string name="bold"><b>B</b></string>
    <string name="italic"><i>I</i></string>
    <string name="underline"><u>U</u></string>
    <string name="sort">Sort by :</string>

    <string name="theme">Theme</string>
    <string name="background_color">Background color</string>
    <string name="settings">Settings</string>

    <string name="single_select">Single Select</string>
    <string name="multiple_select">Multiple Select</string>
    <string name="rectangle_select">Rectangle Select</string>

    <string name="export">Export</string>

    <string name="welcome">Welcome</string>
    <string name="username">Name</string>
    <string name="username_or_email">Username or Email</string>
    <string name="email">Email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="log_in">Log in</string>
    <string name="login">Login</string>
    <string name="log_out">Log out</string>
    <string name="log_in_suggestion">Already have an account? Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_suggestion">Don\'t have an account? Sign up</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="or"><strike>--------</strike>   or   <strike>--------</strike></string>
    <string name="skip">Skip</string>

    <string name="nav_drawer_open">Open</string>
    <string name="nav_drawer_close">Close</string>

    <string name="import_map">Import</string>

    <string name="field_required">This field is required</string>

    <string name="password_requirement">Password should be more than 6 characters</string>

    <string name="password_mismatch">Password does not match</string>

    <string name="invalid_email">Email is invalid</string>

    <string name="email_used">Email is already used</string>

    <string name="signing_up">Signing up</string>
    <string name="logging_in">Logging in</string>

    <string name="please_wait">Please wait</string>

    <string name="invalid_credential">Wrong email or password</string>

    <string name="no_internet">No internet connection</string>

    <string name="file_invalid">File is invalid</string>

    <string name="generate_thumbnail">Generating thumbnails</string>

    <string name="confirm_delete">Confirm delete</string>

</resources>
