<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="?attr/colorOnPrimary"
        android:backgroundTint="?attr/colorButtonNormal"
        android:backgroundTintMode="multiply"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clipChildren="false"
        android:layout_marginBottom="10dp">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_gravity="top|center_horizontal"
            android:src="@drawable/ic_icon_rounded"
            android:elevation="2dp"
            android:translationZ="@dimen/elevation" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="@dimen/margin_base"
            app:cardCornerRadius="@dimen/corner_radius"
            app:cardElevation="@dimen/elevation">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="40dp"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_base"
                    android:hint="@string/email"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeActionLabel="@string/username"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tl_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_base"
                    android:layout_margin="@dimen/margin_base"
                    android:hint="@string/password"
                    app:boxCornerRadiusBottomEnd="@dimen/corner_radius"
                    app:boxCornerRadiusBottomStart="@dimen/corner_radius"
                    app:boxCornerRadiusTopEnd="@dimen/corner_radius"
                    app:boxCornerRadiusTopStart="@dimen/corner_radius"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    app:endIconMode="password_toggle">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin_base"
                    android:text="@string/log_in"
                    android:textAllCaps="false"
                    app:cornerRadius="@dimen/corner_radius"
                    android:textColor="@color/white"
                    android:elevation="@dimen/elevation"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/sign_up_suggestion"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="@dimen/margin_base"
                    android:text="@string/sign_up_suggestion"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/forgot_password"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginHorizontal="@dimen/margin_base"
                    android:text="@string/forgot_password"
                    android:textAllCaps="false"
                    android:textColor="@color/colorAccent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:layout_gravity="center"
                    android:textColor="@color/material_on_background_emphasis_medium"/>
                <com.google.android.gms.common.SignInButton
                    android:id="@+id/google_sign_in"
                    android:layout_width="200dp"
                    android:layout_height="@dimen/button_width"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginVertical="@dimen/margin_base"
                    android:elevation="@dimen/elevation"/>
<!--                <com.facebook.login.widget.LoginButton-->
<!--                    android:layout_width="190dp"-->
<!--                    android:layout_height="@dimen/button_width"-->
<!--                    android:layout_gravity="center"-->
<!--                    android:layout_marginBottom="@dimen/margin_base"/>-->
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </FrameLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/skip"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="@dimen/margin_base"
                android:text="@string/skip"
                android:textAllCaps="false"
                android:textColor="@color/material_on_background_emphasis_medium" />
</FrameLayout>