<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="15dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:behavior_hideable="true"
    app:behavior_peekHeight="0dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:orientation="horizontal"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/text_size"
            android:textSize="@dimen/medium_text_size">

        </TextView>

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end">

            <com.google.android.material.button.MaterialButton

                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/small"
                android:textAllCaps="false"
                android:textSize="@dimen/small_text_size"
                app:cornerRadius="20dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/medium"
                android:textAllCaps="false"
                android:textSize="@dimen/medium_text_size"
                app:cornerRadius="20dp">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/large"
                android:textAllCaps="false"
                android:textSize="@dimen/large_text_size"
                app:cornerRadius="20dp">

            </com.google.android.material.button.MaterialButton>
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_margin="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/text_color"
            android:textSize="@dimen/medium_text_size">
        </TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@android:color/black"
            android:backgroundTintMode="multiply"
            android:layout_gravity="end">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/background_color"
            android:textSize="@dimen/medium_text_size">

        </TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="multiply"
            android:layout_gravity="end">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/connection_type"
            android:textSize="@dimen/medium_text_size">

        </TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="multiply"
            android:layout_gravity="end">
        </androidx.appcompat.widget.AppCompatButton>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/list_item_height"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:layout_weight="1"
            android:text="@string/connection_color"
            android:textSize="@dimen/medium_text_size">

        </TextView>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="35sp"
            android:background="@drawable/layout_bg"
            android:backgroundTint="@android:color/white"
            android:backgroundTintMode="multiply"
            android:layout_gravity="end">
        </androidx.appcompat.widget.AppCompatButton>
    </LinearLayout>

</LinearLayout>